# mAIgic

./: README.md  pyproject.toml  requirements.txt  trello_bot.py
.circleci/: config.yml
tests/: test_samples.py
