[project]
name = "mAIgic"
version = "0.1.0"
description = "A project focused on testing, static analysis, and CI integration with CircleCI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests"
]

[tool.ruff]
select = ["E", "F", "W"]
ignore = []
line-length = 100
